# geo5017-machine-learning

./: .gitignore  A1.py  README.md  closed form solution.py  makefile  pyproject.toml  requirements.txt  step1.py  step2.py  step3.py
ass1/: common.py  plot.py  task1.py  task2a.py  task2b.py
ass2/: learning_curve.py  main.py  preprocess.py  random_forest.py  svm.py  visualize.py
